configs/zynq_[pluto|m2k]_defconfig: use compiler searched in $PATH
Unset BR2_TOOLCHAIN_EXTERNAL_PATH so that the compiler will be searched
in $PATH


Signed-off-by: Michael Hennerich <michael.hennerich@analog.com>

--- a/configs/zynq_m2k_defconfig
+++ b/configs/zynq_m2k_defconfig
@@ -4,7 +4,7 @@ BR2_ARM_ENABLE_NEON=y
 BR2_ARM_FPU_NEON=y
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
-BR2_TOOLCHAIN_EXTERNAL_PATH="/opt/Xilinx/SDK/2015.4/gnu/arm/lin"
+BR2_TOOLCHAIN_EXTERNAL_PATH=""
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="arm-xilinx-linux-gnueabi"
 BR2_TOOLCHAIN_EXTERNAL_GCC_4_9=y
 BR2_TOOLCHAIN_EXTERNAL_HEADERS_3_19=y
