package: libad9361-iio: Add AD9361 library
Signed-off-by: Michael Hennerich <michael.hennerich@analog.com>

--- a/configs/zynq_pluto_defconfig
+++ b/configs/zynq_pluto_defconfig
@@ -43,6 +43,7 @@ BR2_PACKAGE_LINUX_FIRMWARE_RTL_88XX=y
 BR2_PACKAGE_INPUT_EVENT_DAEMON=y
 BR2_PACKAGE_UBOOT_TOOLS=y
 BR2_PACKAGE_ZLIB=y
+BR2_PACKAGE_LIBAD9361_IIO=y
 BR2_PACKAGE_LIBIIO_IIOD_USBD=y
 BR2_PACKAGE_LIBIIO_TESTS=y
 BR2_PACKAGE_LIBINI=y
