--- a/package/Config.in
+++ b/package/Config.in
@@ -1114,6 +1114,7 @@ menu "Hardware handling"
 	source "package/gnu-efi/Config.in"
 	source "package/hidapi/Config.in"
 	source "package/lcdapi/Config.in"
+	source "package/libad9361-iio/Config.in"
 	source "package/libaio/Config.in"
 	source "package/libatasmart/Config.in"
 	source "package/libcec/Config.in"
