pluto, m2k: Add GPL2 LICENSE file to the MSD
Signed-off-by: Michael Hennerich <michael.hennerich@analog.com>

--- a/board/pluto/genimage-msd.cfg
+++ b/board/pluto/genimage-msd.cfg
@@ -1,7 +1,7 @@
 image boot.vfat {
   vfat {
    extraargs = "-n PlutoSDR"
-    files = {"index.html"}
+    files = {"index.html", "LICENSE"}
   }
   size = 30M
 }
