sidekiqz2: add support for new board
This patch adds support for the Sidekiq Z2 board from Epiq Solutions.

It's a copy of Pluto with some adaptations inspired from M2k.
Seems that M2k re-uses some Pluto parts.
The same thing has been done for SidekiqZ2 to avoid some code duplication.

The `msd` folder [which contains files that will be mounted on the user's
system] contains only some stub files that may be modified later.

Signed-off-by: Alexandru Ardelean <alexandru.ardelean@analog.com>

--- a/package/Config.in
+++ b/package/Config.in
@@ -1910,7 +1910,7 @@ menu "Text editors and viewers"
 	source "package/vim/Config.in"
 endmenu
 
-menu "Applications and Tools for PlutoSDR & M2k"
+menu "Applications and Tools for PlutoSDR, M2k & SidekiqZ2"
 	source "package/poll_sysfs/Config.in"
 	source "package/ad936x_ref_cal/Config.in"
 endmenu
