--- a/board/m2k/genimage-msd.cfg
+++ b/board/m2k/genimage-msd.cfg
@@ -1,7 +1,7 @@
 image boot.vfat {
   vfat {
    extraargs = "-n M2k"
-    files = {"index.html", "LICENSE"}
+    files = {"index.html", "LICENSE.html"}
   }
   size = 30M
 }
