--- a/board/sidekiqz2/genimage-msd.cfg
+++ b/board/sidekiqz2/genimage-msd.cfg
@@ -1,7 +1,7 @@
 image boot.vfat {
   vfat {
    extraargs = "-n SidekiqZ2"
-    files = {"index.html"}
+    files = {"index.html", "LICENSE.html"}
   }
   size = 30M
 }
